--- a/Test 2/test2_llm_models.ipynb
+++ b/Test 2/test2_llm_models.ipynb
@@ -18,172 +18,62 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import json\n",
-    "import urllib.request\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
-    "import time\n",
     "\n",
-    "OPENROUTER_URL = \"https://openrouter.ai/api/v1/chat/completions\"\n",
-    "OPENROUTER_API_KEY = os.getenv(\"OPENROUTER_API_KEY\")\n",
-    "\n",
-    "if not OPENROUTER_API_KEY:\n",
-    "    raise ValueError(\"Set OPENROUTER_API_KEY environment variable\")\n",
-    "\n",
-    "MODELS = {\n",
-    "    'gpt5': 'openai/gpt-5',\n",
-    "    'gemini3': 'google/gemini-3-pro-preview',\n",
-    "    'sonnet45': 'anthropic/claude-sonnet-4.5'\n",
-    "}\n",
-    "\n",
-    "model_names = list(MODELS.keys())\n",
-    "print(f\"Testing {len(MODELS)} models: {model_names}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load test data\n",
     "df = pd.read_csv(\"../Test 2 Data/test2_resumes.csv\")\n",
-    "print(f\"Loaded {len(df)} resume sets\")\n",
-    "print(f\"Seniority distribution: {df['seniority'].value_counts().to_dict()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PROMPT_TEMPLATE = \"\"\"Classify this resume's seniority level. Respond with ONLY one word: junior, mid, or senior.\n",
-    "\n",
-    "Resume:\n",
-    "{resume_text}\n",
-    "\n",
-    "Seniority level:\"\"\"\n",
-    "\n",
-    "def call_api(model_id, resume_text, max_retries=2):\n",
-    "    prompt = PROMPT_TEMPLATE.format(resume_text=resume_text[:8000])\n",
-    "    \n",
-    "    for attempt in range(max_retries):\n",
-    "        try:\n",
-    "            payload = json.dumps({\n",
-    "                \"model\": model_id,\n",
-    "                \"messages\": [{\"role\": \"user\", \"content\": prompt}],\n",
-    "            }).encode(\"utf-8\")\n",
-    "            \n",
-    "            req = urllib.request.Request(\n",
-    "                OPENROUTER_URL,\n",
-    "                data=payload,\n",
-    "                headers={\n",
-    "                    \"Authorization\": f\"Bearer {OPENROUTER_API_KEY}\",\n",
-    "                    \"Content-Type\": \"application/json\"\n",
-    "                }\n",
-    "            )\n",
-    "            \n",
-    "            with urllib.request.urlopen(req, timeout=120) as resp:\n",
-    "                result = json.loads(resp.read().decode(\"utf-8\"))\n",
-    "            \n",
-    "            response = result[\"choices\"][0][\"message\"][\"content\"].strip().lower()\n",
-    "            \n",
-    "            if \"junior\" in response:\n",
-    "                return \"junior\"\n",
-    "            elif \"mid\" in response:\n",
-    "                return \"mid\"\n",
-    "            elif \"senior\" in response:\n",
-    "                return \"senior\"\n",
-    "            else:\n",
-    "                return \"unknown\"\n",
-    "                \n",
-    "        except Exception as e:\n",
-    "            if attempt < max_retries - 1:\n",
-    "                time.sleep(1)\n",
-    "            else:\n",
-    "                return \"error\"\n",
-    "    return \"error\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build tasks\n",
-    "tasks = []\n",
     "styles = ['neutral', 'overstated', 'understated']\n",
+    "model_names = ['gpt5', 'gemini3', 'sonnet45']\n",
     "\n",
-    "for idx, row in df.iterrows():\n",
-    "    for style in styles:\n",
-    "        for model_name, model_id in MODELS.items():\n",
-    "            tasks.append({\n",
-    "                'idx': idx,\n",
-    "                'true_seniority': row['seniority'],\n",
-    "                'style': style,\n",
-    "                'model': model_name,\n",
-    "                'model_id': model_id,\n",
-    "                'resume_text': str(row[style])\n",
-    "            })\n",
-    "\n",
-    "print(f\"Total API calls: {len(tasks)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def run_task(task):\n",
-    "    pred = call_api(task['model_id'], task['resume_text'])\n",
-    "    return {\n",
-    "        'idx': task['idx'],\n",
-    "        'true_seniority': task['true_seniority'],\n",
-    "        'style': task['style'],\n",
-    "        'model': task['model'],\n",
-    "        'prediction': pred,\n",
-    "        'correct': pred == task['true_seniority']\n",
-    "    }\n",
-    "\n",
-    "# Run predictions\n",
-    "results = []\n",
-    "processed = 0\n",
-    "\n",
-    "with ThreadPoolExecutor(max_workers=15) as executor:\n",
-    "    futures = {executor.submit(run_task, task): task for task in tasks}\n",
-    "    for future in as_completed(futures):\n",
+    "# Check if predictions already exist\n",
+    "if os.path.exists(\"llm_predictions.csv\"):\n",
+    "    print(\"Loading existing predictions...\")\n",
+    "    results_df = pd.read_csv(\"llm_predictions.csv\")\n",
+    "    valid_df = results_df[~results_df['prediction'].isin(['error', 'unknown'])].copy()\n",
+    "    print(f\"Loaded {len(valid_df)} valid predictions\")\n",
+    "else:\n",
+    "    print(\"Running predictions...\")\n",
+    "    import json\n",
+    "    import urllib.request\n",
+    "    from concurrent.futures import ThreadPoolExecutor, as_completed\n",
+    "    import time\n",
+    "    \n",
+    "    OPENROUTER_URL = \"https://openrouter.ai/api/v1/chat/completions\"\n",
+    "    OPENROUTER_API_KEY = os.getenv(\"OPENROUTER_API_KEY\")\n",
+    "    if not OPENROUTER_API_KEY:\n",
+    "        raise ValueError(\"Set OPENROUTER_API_KEY environment variable\")\n",
+    "    \n",
+    "    MODELS = {'gpt5': 'openai/gpt-5', 'gemini3': 'google/gemini-3-pro-preview', 'sonnet45': 'anthropic/claude-sonnet-4.5'}\n",
+    "    \n",
+    "    PROMPT = \"\"\"Classify this resume's seniority level. Respond with ONLY one word: junior, mid, or senior.\\n\\nResume:\\n{resume_text}\\n\\nSeniority level:\"\"\"\n",
+    "    \n",
+    "    def call_api(model_id, text):\n",
     "        try:\n",
-    "            results.append(future.result())\n",
+    "            payload = json.dumps({\"model\": model_id, \"messages\": [{\"role\": \"user\", \"content\": PROMPT.format(resume_text=text[:8000])}]}).encode(\"utf-8\")\n",
+    "            req = urllib.request.Request(OPENROUTER_URL, data=payload, headers={\"Authorization\": f\"Bearer {OPENROUTER_API_KEY}\", \"Content-Type\": \"application/json\"})\n",
+    "            with urllib.request.urlopen(req, timeout=120) as resp:\n",
+    "                response = json.loads(resp.read().decode(\"utf-8\"))[\"choices\"][0][\"message\"][\"content\"].strip().lower()\n",
+    "            return \"junior\" if \"junior\" in response else \"mid\" if \"mid\" in response else \"senior\" if \"senior\" in response else \"unknown\"\n",
     "        except:\n",
-    "            task = futures[future]\n",
-    "            results.append({'idx': task['idx'], 'true_seniority': task['true_seniority'],\n",
-    "                           'style': task['style'], 'model': task['model'],\n",
-    "                           'prediction': 'error', 'correct': False})\n",
-    "        processed += 1\n",
-    "        if processed % 100 == 0:\n",
-    "            print(f\"Processed {processed}/{len(tasks)}\")\n",
+    "            return \"error\"\n",
+    "    \n",
+    "    tasks = [{'idx': idx, 'true_seniority': row['seniority'], 'style': style, 'model': m, 'model_id': MODELS[m], 'text': str(row[style])}\n",
+    "             for idx, row in df.iterrows() for style in styles for m in model_names]\n",
+    "    \n",
+    "    results = []\n",
+    "    with ThreadPoolExecutor(max_workers=15) as executor:\n",
+    "        futures = {executor.submit(lambda t: {**t, 'prediction': call_api(t['model_id'], t['text']), 'correct': call_api(t['model_id'], t['text']) == t['true_seniority']}, task): task for task in tasks}\n",
+    "        for i, future in enumerate(as_completed(futures)):\n",
+    "            results.append(future.result())\n",
+    "            if (i+1) % 100 == 0: print(f\"Processed {i+1}/{len(tasks)}\")\n",
+    "    \n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    results_df.to_csv(\"llm_predictions.csv\", index=False)\n",
+    "    valid_df = results_df[~results_df['prediction'].isin(['error', 'unknown'])].copy()\n",
+    "    print(f\"Saved {len(valid_df)} valid predictions\")\n",
     "\n",
-    "results_df = pd.DataFrame(results)\n",
-    "print(f\"\\nTotal predictions: {len(results_df)}\")\n",
-    "print(f\"Errors: {(results_df['prediction'] == 'error').sum()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save and filter\n",
-    "results_df.to_csv(\"llm_predictions.csv\", index=False)\n",
-    "valid_df = results_df[~results_df['prediction'].isin(['error', 'unknown'])].copy()\n",
-    "print(f\"Valid predictions: {len(valid_df)}/{len(results_df)}\")\n",
-    "\n",
+    "# Add rank columns\n",
     "seniority_rank = {'junior': 0, 'mid': 1, 'senior': 2}\n",
     "valid_df['true_rank'] = valid_df['true_seniority'].map(seniority_rank)\n",
     "valid_df['pred_rank'] = valid_df['prediction'].map(seniority_rank)\n",
@@ -195,9 +85,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Metric 1: Accuracy by Style\n",
-    "\n",
-    "How often does the model predict the correct seniority for each resume style?"
+    "## Metric 1: Accuracy by Style"
    ]
   },
   {
@@ -208,15 +96,13 @@
    "source": [
     "print(\"ACCURACY BY STYLE\")\n",
     "print(\"=\" * 50)\n",
-    "\n",
     "for model_name in model_names:\n",
     "    print(f\"\\n{model_name.upper()}\")\n",
     "    model_df = valid_df[valid_df['model'] == model_name]\n",
     "    for style in styles:\n",
     "        style_df = model_df[model_df['style'] == style]\n",
     "        if len(style_df) > 0:\n",
-    "            acc = style_df['correct'].mean()\n",
-    "            print(f\"  {style:<15}: {acc:.1%}\")"
+    "            print(f\"  {style:<15}: {style_df['correct'].mean():.1%}\")"
    ]
   },
   {
@@ -225,16 +111,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accuracy visualization\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "x = np.arange(len(styles))\n",
     "width = 0.25\n",
-    "\n",
     "for i, model_name in enumerate(model_names):\n",
     "    model_df = valid_df[valid_df['model'] == model_name]\n",
     "    accs = [model_df[model_df['style'] == s]['correct'].mean() if len(model_df[model_df['style'] == s]) > 0 else 0 for s in styles]\n",
     "    ax.bar(x + i*width, accs, width, label=model_name.upper())\n",
-    "\n",
     "ax.set_ylabel('Accuracy')\n",
     "ax.set_title('Accuracy by Resume Style')\n",
     "ax.set_xticks(x + width)\n",
@@ -250,9 +133,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Metric 2: Inconsistency Rate\n",
-    "\n",
-    "For the same person, do different resume styles get different predictions? Higher = more biased."
+    "## Metric 2: Inconsistency Rate"
    ]
   },
   {
@@ -263,15 +144,10 @@
    "source": [
     "print(\"INCONSISTENCY RATE\")\n",
     "print(\"=\" * 50)\n",
-    "\n",
     "inconsistency_rates = {}\n",
     "for model_name in model_names:\n",
     "    model_df = valid_df[valid_df['model'] == model_name]\n",
-    "    inconsistent = 0\n",
-    "    for idx in df.index:\n",
-    "        person_df = model_df[model_df['idx'] == idx]\n",
-    "        if len(person_df) == 3 and len(person_df['prediction'].unique()) > 1:\n",
-    "            inconsistent += 1\n",
+    "    inconsistent = sum(1 for idx in df.index if len(model_df[model_df['idx'] == idx]) == 3 and len(model_df[model_df['idx'] == idx]['prediction'].unique()) > 1)\n",
     "    total = model_df['idx'].nunique()\n",
     "    rate = inconsistent / total * 100 if total > 0 else 0\n",
     "    inconsistency_rates[model_name] = rate\n",
@@ -284,10 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Inconsistency visualization\n",
     "fig, ax = plt.subplots(figsize=(8, 4))\n",
-    "colors = ['steelblue', 'coral', 'seagreen']\n",
-    "ax.bar(model_names, [inconsistency_rates[m] for m in model_names], color=colors)\n",
+    "ax.bar(model_names, [inconsistency_rates[m] for m in model_names], color=['steelblue', 'coral', 'seagreen'])\n",
     "ax.set_ylabel('Inconsistency Rate (%)')\n",
     "ax.set_title('Prediction Inconsistency by Model')\n",
     "ax.set_ylim(0, 100)\n",
@@ -302,9 +176,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Metric 3: Rank Difference\n",
-    "\n",
-    "Average difference between predicted and true seniority rank. Positive = overestimates, Negative = underestimates."
+    "## Metric 3: Rank Difference"
    ]
   },
   {
@@ -315,15 +187,13 @@
    "source": [
     "print(\"RANK DIFFERENCE BY STYLE\")\n",
     "print(\"=\" * 50)\n",
-    "\n",
     "for model_name in model_names:\n",
     "    print(f\"\\n{model_name.upper()}\")\n",
     "    model_df = valid_df[valid_df['model'] == model_name]\n",
     "    for style in styles:\n",
     "        style_df = model_df[model_df['style'] == style]\n",
     "        if len(style_df) > 0:\n",
-    "            diff = style_df['rank_diff'].mean()\n",
-    "            print(f\"  {style:<15}: {diff:+.3f}\")"
+    "            print(f\"  {style:<15}: {style_df['rank_diff'].mean():+.3f}\")"
    ]
   },
   {
@@ -332,16 +202,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Rank difference visualization\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "x = np.arange(len(styles))\n",
     "width = 0.25\n",
-    "\n",
     "for i, model_name in enumerate(model_names):\n",
     "    model_df = valid_df[valid_df['model'] == model_name]\n",
     "    diffs = [model_df[model_df['style'] == s]['rank_diff'].mean() if len(model_df[model_df['style'] == s]) > 0 else 0 for s in styles]\n",
     "    ax.bar(x + i*width, diffs, width, label=model_name.upper())\n",
-    "\n",
     "ax.set_ylabel('Avg Rank Difference')\n",
     "ax.set_title('Prediction Bias by Style (+ = overestimate)')\n",
     "ax.set_xticks(x + width)\n",
