--- a/Test 3/test3_finetuned_models.ipynb
+++ b/Test 3/test3_finetuned_models.ipynb
@@ -17,115 +17,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import torch\n",
-    "from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
     "\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "print(f\"Using device: {device}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load test data\n",
     "df = pd.read_csv(\"../Test 3 Data/test3_resumes.csv\")\n",
-    "print(f\"Loaded {len(df)} resume variations\")\n",
-    "print(f\"Demographics: {df['demographic'].value_counts().to_dict()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load models\n",
-    "MODEL_PATHS = {\n",
-    "    'distilbert': '../Smaller Models/distilbert_resume_level',\n",
-    "    'roberta': '../Smaller Models/roberta_resume_level'\n",
-    "}\n",
+    "demographics = ['caucasian_male', 'caucasian_female', 'african_american_male', 'african_american_female']\n",
+    "model_names = ['distilbert', 'roberta']\n",
     "\n",
-    "models = {}\n",
-    "tokenizers = {}\n",
-    "\n",
-    "for name, path in MODEL_PATHS.items():\n",
-    "    print(f\"Loading {name}...\", end=\" \")\n",
-    "    tokenizers[name] = AutoTokenizer.from_pretrained(path)\n",
-    "    models[name] = AutoModelForSequenceClassification.from_pretrained(path).to(device)\n",
-    "    models[name].eval()\n",
-    "    print(\"Done\")\n",
-    "\n",
-    "id2label = {0: 'junior', 1: 'mid', 2: 'senior'}\n",
-    "model_names = list(models.keys())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def predict(model_name, text):\n",
-    "    tokenizer = tokenizers[model_name]\n",
-    "    model = models[model_name]\n",
+    "# Check if predictions already exist\n",
+    "if os.path.exists(\"test3_finetuned_predictions.csv\"):\n",
+    "    print(\"Loading existing predictions...\")\n",
+    "    results_df = pd.read_csv(\"test3_finetuned_predictions.csv\")\n",
+    "    print(f\"Loaded {len(results_df)} predictions\")\n",
+    "else:\n",
+    "    print(\"Running predictions...\")\n",
+    "    import torch\n",
+    "    from transformers import AutoTokenizer, AutoModelForSequenceClassification\n",
+    "    import warnings\n",
+    "    warnings.filterwarnings('ignore')\n",
     "    \n",
-    "    inputs = tokenizer(text, return_tensors=\"pt\", truncation=True, max_length=512, padding=True)\n",
-    "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "    device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "    \n",
-    "    with torch.no_grad():\n",
-    "        outputs = model(**inputs)\n",
-    "        pred_id = torch.argmax(outputs.logits, dim=1).item()\n",
+    "    MODEL_PATHS = {\n",
+    "        'distilbert': '../Smaller Models/distilbert_resume_level',\n",
+    "        'roberta': '../Smaller Models/roberta_resume_level'\n",
+    "    }\n",
     "    \n",
-    "    return id2label[pred_id]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Run predictions\n",
-    "results = []\n",
+    "    models, tokenizers = {}, {}\n",
+    "    for name, path in MODEL_PATHS.items():\n",
+    "        tokenizers[name] = AutoTokenizer.from_pretrained(path)\n",
+    "        models[name] = AutoModelForSequenceClassification.from_pretrained(path).to(device)\n",
+    "        models[name].eval()\n",
+    "    \n",
+    "    id2label = {0: 'junior', 1: 'mid', 2: 'senior'}\n",
+    "    \n",
+    "    def predict(model_name, text):\n",
+    "        inputs = tokenizers[model_name](text, return_tensors=\"pt\", truncation=True, max_length=512, padding=True)\n",
+    "        inputs = {k: v.to(device) for k, v in inputs.items()}\n",
+    "        with torch.no_grad():\n",
+    "            outputs = models[model_name](**inputs)\n",
+    "        return id2label[torch.argmax(outputs.logits, dim=1).item()]\n",
+    "    \n",
+    "    results = []\n",
+    "    for idx, row in df.iterrows():\n",
+    "        for model_name in model_names:\n",
+    "            pred = predict(model_name, row['resume'])\n",
+    "            results.append({'original_idx': row['original_idx'], 'true_seniority': row['seniority'],\n",
+    "                           'demographic': row['demographic'], 'model': model_name,\n",
+    "                           'prediction': pred, 'correct': pred == row['seniority']})\n",
+    "        if (idx + 1) % 50 == 0:\n",
+    "            print(f\"Processed {idx + 1}/{len(df)}\")\n",
+    "    \n",
+    "    results_df = pd.DataFrame(results)\n",
+    "    results_df.to_csv(\"test3_finetuned_predictions.csv\", index=False)\n",
+    "    print(f\"Saved {len(results_df)} predictions\")\n",
     "\n",
-    "for idx, row in df.iterrows():\n",
-    "    for model_name in model_names:\n",
-    "        pred = predict(model_name, row['resume'])\n",
-    "        results.append({\n",
-    "            'original_idx': row['original_idx'],\n",
-    "            'true_seniority': row['seniority'],\n",
-    "            'demographic': row['demographic'],\n",
-    "            'model': model_name,\n",
-    "            'prediction': pred,\n",
-    "            'correct': pred == row['seniority']\n",
-    "        })\n",
-    "    if (idx + 1) % 50 == 0:\n",
-    "        print(f\"Processed {idx + 1}/{len(df)}\")\n",
-    "\n",
-    "results_df = pd.DataFrame(results)\n",
-    "print(f\"\\nTotal predictions: {len(results_df)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save and add helper columns\n",
-    "results_df.to_csv(\"test3_finetuned_predictions.csv\", index=False)\n",
-    "\n",
+    "# Add helper columns\n",
     "results_df['race'] = results_df['demographic'].apply(lambda x: 'african_american' if 'african' in x else 'caucasian')\n",
     "results_df['gender'] = results_df['demographic'].apply(lambda x: 'female' if 'female' in x else 'male')\n",
-    "\n",
     "seniority_rank = {'junior': 0, 'mid': 1, 'senior': 2}\n",
     "results_df['true_rank'] = results_df['true_seniority'].map(seniority_rank)\n",
     "results_df['pred_rank'] = results_df['prediction'].map(seniority_rank)\n",
@@ -137,9 +88,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "## Metric 1: Accuracy by Demographic\n",
-    "\n",
-    "Prediction accuracy for each demographic group."
+    "## Metric 1: Accuracy by Demographic"
    ]
   },
   {
@@ -148,11 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "demographics = ['caucasian_male', 'caucasian_female', 'african_american_male', 'african_american_female']\n",
-    "\n",
     "print(\"ACCURACY BY DEMOGRAPHIC\")\n",
     "print(\"=\" * 50)\n",
-    "\n",
     "for model_name in model_names:\n",
     "    print(f\"\\n{model_name.upper()}\")\n",
     "    model_df = results_df[results_df['model'] == model_name]\n",
@@ -167,16 +113,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accuracy visualization\n",
     "fig, ax = plt.subplots(figsize=(10, 5))\n",
     "x = np.arange(len(demographics))\n",
     "width = 0.35\n",
-    "\n",
     "for i, model_name in enumerate(model_names):\n",
     "    model_df = results_df[results_df['model'] == model_name]\n",
     "    accs = [model_df[model_df['demographic'] == d]['correct'].mean() for d in demographics]\n",
     "    ax.bar(x + i*width, accs, width, label=model_name.upper())\n",
-    "\n",
     "ax.set_ylabel('Accuracy')\n",
     "ax.set_title('Accuracy by Demographic')\n",
     "ax.set_xticks(x + width/2)\n",
@@ -194,7 +137,7 @@
     "---\n",
     "## Metric 2: Racial Bias Indicator\n",
     "\n",
-    "Difference in average rank prediction between Caucasian and African American names. Positive = favors Caucasian."
+    "Positive = favors Caucasian, Negative = favors African American"
    ]
   },
   {
@@ -205,15 +148,11 @@
    "source": [
     "print(\"RACIAL BIAS INDICATOR\")\n",
     "print(\"=\" * 50)\n",
-    "\n",
-    "racial_bias = {}\n",
     "for model_name in model_names:\n",
     "    model_df = results_df[results_df['model'] == model_name]\n",
     "    cauc = model_df[model_df['race'] == 'caucasian']['rank_diff'].mean()\n",
     "    aa = model_df[model_df['race'] == 'african_american']['rank_diff'].mean()\n",
     "    bias = cauc - aa\n",
-    "    racial_bias[model_name] = bias\n",
-    "    \n",
     "    label = 'Favors Caucasian' if bias > 0.05 else 'Favors AA' if bias < -0.05 else 'No significant bias'\n",
     "    print(f\"{model_name.upper()}: {bias:+.3f} ({label})\")\n",
     "    print(f\"  Caucasian avg rank diff: {cauc:+.3f}\")\n",
@@ -226,17 +165,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Racial bias visualization\n",
     "fig, ax = plt.subplots(figsize=(8, 5))\n",
     "x = np.arange(2)\n",
     "width = 0.35\n",
-    "\n",
     "for i, model_name in enumerate(model_names):\n",
     "    model_df = results_df[results_df['model'] == model_name]\n",
     "    cauc = model_df[model_df['race'] == 'caucasian']['rank_diff'].mean()\n",
     "    aa = model_df[model_df['race'] == 'african_american']['rank_diff'].mean()\n",
     "    ax.bar(x + i*width, [cauc, aa], width, label=model_name.upper())\n",
-    "\n",
     "ax.set_ylabel('Avg Rank Difference')\n",
     "ax.set_title('Prediction Bias by Race')\n",
     "ax.set_xticks(x + width/2)\n",
@@ -254,7 +190,7 @@
     "---\n",
     "## Metric 3: Gender Bias Indicator\n",
     "\n",
-    "Difference in average rank prediction between Male and Female names. Positive = favors Male."
+    "Positive = favors Male, Negative = favors Female"
    ]
   },
   {
@@ -265,15 +201,11 @@
    "source": [
     "print(\"GENDER BIAS INDICATOR\")\n",
     "print(\"=\" * 50)\n",
-    "\n",
-    "gender_bias = {}\n",
     "for model_name in model_names:\n",
     "    model_df = results_df[results_df['model'] == model_name]\n",
     "    male = model_df[model_df['gender'] == 'male']['rank_diff'].mean()\n",
     "    female = model_df[model_df['gender'] == 'female']['rank_diff'].mean()\n",
     "    bias = male - female\n",
-    "    gender_bias[model_name] = bias\n",
-    "    \n",
     "    label = 'Favors Male' if bias > 0.05 else 'Favors Female' if bias < -0.05 else 'No significant bias'\n",
     "    print(f\"{model_name.upper()}: {bias:+.3f} ({label})\")\n",
     "    print(f\"  Male avg rank diff: {male:+.3f}\")\n",
@@ -286,17 +218,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Gender bias visualization\n",
     "fig, ax = plt.subplots(figsize=(8, 5))\n",
     "x = np.arange(2)\n",
     "width = 0.35\n",
-    "\n",
     "for i, model_name in enumerate(model_names):\n",
     "    model_df = results_df[results_df['model'] == model_name]\n",
     "    male = model_df[model_df['gender'] == 'male']['rank_diff'].mean()\n",
     "    female = model_df[model_df['gender'] == 'female']['rank_diff'].mean()\n",
     "    ax.bar(x + i*width, [male, female], width, label=model_name.upper())\n",
-    "\n",
     "ax.set_ylabel('Avg Rank Difference')\n",
     "ax.set_title('Prediction Bias by Gender')\n",
     "ax.set_xticks(x + width/2)\n",
