added more details to readme

--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -9,16 +9,6 @@
     "\n",
     "This notebook processes raw resume data from `master_resumes_original.jsonl` and produces `cleaned_resumes.csv` for model training.\n",
     "\n",
-    "## Pipeline\n",
-    "\n",
-    "1. **Inspect structure**: examine nested JSON of one resume\n",
-    "2. **Flatten data**: convert nested JSON to DataFrame columns (personal_info → name/email/summary, experience/education/skills/projects → JSON strings)\n",
-    "3. **Filter invalid dates**: remove resumes with placeholder start/end dates\n",
-    "4. **Extract seniority**: calculate total experience time, identify target job's level, clear that level from data (avoid leakage)\n",
-    "5. **Parse to text**: convert JSON fields to readable strings\n",
-    "6. **Generate summaries**: use LLM to create professional summaries, remove seniority keywords\n",
-    "7. **Balance dataset**: sample 700 per class (junior/mid/senior)\n",
-    "\n",
     "## Imports\n",
     "\n",
     "- **`json`**: parse JSONL records\n",
@@ -26,7 +16,7 @@
     "- **`datetime`**: calculate experience durations\n",
     "- **`re`**: remove seniority keywords\n",
     "- **`urllib.request`**: call OpenRouter API\n",
-    "- **`ThreadPoolExecutor`**: parallelize API calls\n"
+    "- **`ThreadPoolExecutor`**: parallelize API calls"
    ]
   },
   {
